--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     function answerCheck() {
         let ans;
         ans = document.getElementById('answer').value;
-        if (ans == "ECMAScript") {
+        if (ans === "ECMAScript") {
             alert("Correct!")
         } else {
             alert("Didn’t know? It's ECMAScript!")
